--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: Open Data Toolkit
 pages:
     - [index.md, Home, Open Data Toolkit]
+    - [getting-started.md, Open Data Toolkit: Getting Started]
 theme: readthedocs
 site_favicon: imgs/favicon.ico
 google_analytics:
