--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ pages:
     - [data-gov-au-managing-org.md, "Using data.gov.au", "Managing your organisation"]
     - [data-gov-au-publishing-tabular-data.md, "Using data.gov.au", "Publishing & Maintaining Tabular Data"]
     - [data-gov-au-publishing-tabular-data.md, "Using data.gov.au", "Publishing & Maintaining Spatial Data"]
-    - [data-gov-au-dataset-attributes.md, "Using data.gov.au", "data.gov.au dataset attributes (metadata)"]
+    - [data-gov-au-dataset-attributes.md, "Using data.gov.au", "Dataset attributes (metadata)"]
 theme: readthedocs
 site_favicon: imgs/favicon.ico
 google_analytics:
